<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>


    <groupId>com.redhat.eap.qa</groupId>
    <artifactId>tests-jdkspecifics-jdk8</artifactId>
    <version>1.0.0.Final-SNAPSHOT</version>
    <packaging>jar</packaging>

    <parent>
        <groupId>org.jboss.eap.qe</groupId>
        <artifactId>tests-jdkspecifics</artifactId>
        <version>1.0.0.Final-SNAPSHOT</version>
    </parent>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jboss.home/>
        <modular.jvm.args/>
        <version.jboss.bom.eap>6.3.0.GA</version.jboss.bom.eap>
        <version.arquillian-bom>1.4.1.Final</version.arquillian-bom>
        <version.arq-as-container>7.2.0.Final</version.arq-as-container>
        <version.org.jboss.ejb-client>7.2.0.Final</version.org.jboss.ejb-client>
        <version.org.jboss.ejb3-ext-api>2.1.0</version.org.jboss.ejb3-ext-api>
        <version.org.wildfly.extras.creaper>0.9.6</version.org.wildfly.extras.creaper>
        <version.com.sun.xml.ws.jaxws-ri>2.3.1</version.com.sun.xml.ws.jaxws-ri>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.jboss.arquillian</groupId>
                <artifactId>arquillian-bom</artifactId>
                <version>${version.arquillian-bom}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.spec</groupId>
            <artifactId>jboss-javaee-all-6.0</artifactId>
            <version>3.0.3.Final</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.ejb3</groupId>
            <artifactId>jboss-ejb3-ext-api</artifactId>
            <version>${version.org.jboss.ejb3-ext-api}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.arquillian.junit</groupId>
            <artifactId>arquillian-junit-container</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.arquillian.protocol</groupId>
            <artifactId>arquillian-protocol-servlet</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.shrinkwrap</groupId>
            <artifactId>shrinkwrap-impl-base</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.wildfly.extras.creaper</groupId>
            <artifactId>creaper-core</artifactId>
            <version>${version.org.wildfly.extras.creaper}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.jboss.as</groupId>
                    <artifactId>jboss-as-controller-client</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.jboss.remoting3</groupId>
                    <artifactId>jboss-remoting</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.wildfly.extras.creaper</groupId>
            <artifactId>creaper-commands</artifactId>
            <version>${version.org.wildfly.extras.creaper}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.jboss.as</groupId>
                    <artifactId>jboss-as-controller-client</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.jboss.remoting3</groupId>
                    <artifactId>jboss-remoting</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>eap6</id>
            <activation>
                <property>
                    <name>!eap7</name>
                </property>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>org.jboss.as</groupId>
                    <artifactId>jboss-as-arquillian-container-managed</artifactId>
                    <version>${version.arq-as-container}</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.jboss.as</groupId>
                    <artifactId>jboss-as-ejb-client-bom</artifactId>
                    <version>${version.org.jboss.ejb-client}</version>
                    <type>pom</type>
                </dependency>
            </dependencies>
            <properties>
                <node1RemotingPort>4447</node1RemotingPort>
                <node2RemotingPort>4547</node2RemotingPort>
                <node2.management.port>10099</node2.management.port>
            </properties>
        </profile>
        <profile>
            <id>eap7</id>
            <activation>
                <property>
                    <name>eap7</name>
                </property>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>org.wildfly.arquillian</groupId>
                    <artifactId>wildfly-arquillian-container-managed</artifactId>
                    <version>2.1.1.Final</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>commons-io</groupId>
                    <artifactId>commons-io</artifactId>
                    <version>2.4</version>
                </dependency>
                <dependency>
                    <groupId>org.wildfly</groupId>
                    <artifactId>wildfly-ejb-client-bom</artifactId>
                    <version>8.2.0.Final</version>
                    <type>pom</type>
                </dependency>
            </dependencies>
            <properties>
                <node1RemotingPort>8080</node1RemotingPort>
                <node2RemotingPort>8180</node2RemotingPort>
                <node2.management.port>10090</node2.management.port>
            </properties>
        </profile>
        <profile>
            <id>modular-jvm-args</id>
            <activation>
                <jdk>[9,)</jdk>
            </activation>
            <properties>
                <modular.jvm.args>--add-modules=java.se</modular.jvm.args>
            </properties>
        </profile>
        <profile>
            <id>post-jep-320-deps</id>
            <activation>
                <jdk>[11,)</jdk>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>com.sun.xml.ws</groupId>
                    <artifactId>jaxws-ri</artifactId>
                    <version>${version.com.sun.xml.ws.jaxws-ri}</version>
                    <type>pom</type>
                </dependency>
            </dependencies>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>1.8</version>
                <executions>
                    <execution>
                        <id>prepare-server-directories-for-cluster-nodes</id>
                        <phase>generate-test-resources</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target>
                                <!-- node1 -->
                                <delete dir="${project.build.directory}/servers/node1"/>
                                <copy todir="${project.build.directory}/servers/node1">
                                    <fileset dir="${basedir}/../${tests.jdkspecifics.runtime.dir}">
                                        <include name="standalone/**/*"/>
                                    </fileset>
                                    <cutdirsmapper dirs="1"/>
                                </copy>

                                <!-- node2 -->
                                <delete dir="${project.build.directory}/servers/node2"/>
                                <copy todir="${project.build.directory}/servers/node2">
                                    <fileset dir="${basedir}/../${tests.jdkspecifics.runtime.dir}">
                                        <include name="standalone/**/*"/>
                                    </fileset>
                                    <cutdirsmapper dirs="1"/>
                                </copy>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.16</version>
                <configuration>
                    <systemProperties>
                        <jboss.home>${basedir}/../${tests.jdkspecifics.runtime.dir}</jboss.home>
                        <node2ManagementPort>${node2.management.port}</node2ManagementPort>
                        <modular.jvm.args>${modular.jvm.args}</modular.jvm.args>
                    </systemProperties>
                </configuration>
                <executions>
                    <execution>
                        <id>default-test</id>
                        <configuration>
                            <testFailureIgnore>true</testFailureIgnore>
                            <failIfNoTests>false</failIfNoTests>
                            <excludes>
                                <exclude>**/*ClusteringTest.java</exclude>
                            </excludes>
                        </configuration>
                    </execution>
                    <execution>
                        <id>clustering-test</id>
                        <phase>test</phase>
                        <goals>
                            <goal>test</goal>
                        </goals>
                        <configuration>
                            <testFailureIgnore>true</testFailureIgnore>
                            <failIfNoTests>false</failIfNoTests>
                            <includes>
                                <include>**/*ClusteringTest.java</include>
                            </includes>
                            <systemPropertyVariables>
                                <arquillian.launch>jboss-cluster</arquillian.launch>
                                <node1RemotingPort>${node1RemotingPort}</node1RemotingPort>
                                <node2RemotingPort>${node2RemotingPort}</node2RemotingPort>
                            </systemPropertyVariables>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>



</project>
